modal functionality added

--- a/index.html
+++ b/index.html
@@ -217,5 +217,7 @@
     "></script>
     <script src="./js/wristSizeSelector.js"></script>
     <script src="./js/elementQuantity.js"></script>
+    <script src="./js/addToCart.js"></script>
+    <script src="./js/checkout.js"></script>
   </body>
 </html>
